Fix incorrectly-named vertical spacing variables

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -201,7 +201,7 @@ $nav-border-bottom-thickness: 1px;
       position: relative;
 
       @media (max-width: $breakpoint-navigation-threshold) {
-        padding: $spv-inner--large $grid-margin-width;
+        padding: $spv-inner--medium $grid-margin-width;
 
         &::before {
           background: $color-light;
@@ -215,7 +215,7 @@ $nav-border-bottom-thickness: 1px;
       }
 
       @media (min-width: $breakpoint-navigation-threshold + 1) {
-        padding: $spv-inner--large $sph-inner;
+        padding: $spv-inner--medium $sph-inner;
 
         &::before {
           background: $border-color;
@@ -293,7 +293,7 @@ $nav-border-bottom-thickness: 1px;
 
     @media (min-width: $breakpoint-navigation-threshold + 1) {
       // align baselines of menu items and input text
-      $input-gap-top: $spv-inner--large - $spv-nudge;
+      $input-gap-top: $spv-inner--medium - $spv-nudge;
       display: flex;
       flex: 1 1 auto;
       margin: $input-gap-top $sph-inner auto auto;
@@ -339,7 +339,7 @@ $nav-border-bottom-thickness: 1px;
     &--close {
       display: none;
       margin: 0 $grid-margin-width auto $sph-inner;
-      padding: $spv-inner--large 0;
+      padding: $spv-inner--medium 0;
     }
 
     &--open {
